# rtc-teb_local_planner

./: README.md
cugo_ros_simulations/: CMakeLists.txt  README.md  package.xml
cugo_ros_simulations/config/laser_filters/: pointcloud_to_laserscan.yaml  v3ros_filter.yaml
cugo_ros_simulations/config/simulation/: cugo_v3.yaml  cugo_v3_backup.yaml  cugo_v3_complete.yaml  cugo_v3_pure.yaml
cugo_ros_simulations/config/slam/: slam_toolbox_params.yaml
cugo_ros_simulations/evaluation/: COMPARISON_TABLE.md  PARAMETER_BASELINE.md  QUICK_REFERENCE.md  README.md  RVIZ_VISUALIZATION_GUIDE.md
cugo_ros_simulations/evaluation/analysis/: README.md  bag_to_csv.py  verify_parameters.py
cugo_ros_simulations/evaluation/configs/: cugo_v3_mppi.yaml  cugo_v3_teb.yaml
cugo_ros_simulations/evaluation/scenarios/: waypoint_definitions.py  waypoint_navigator.py
cugo_ros_simulations/include/cugo_ros2_control/: cugo_ros2_control.hpp
cugo_ros_simulations/install/: install_simulation_dependencies.sh  set_env.sh
cugo_ros_simulations/launch/: pointcloud_to_scan.launch.py
cugo_ros_simulations/launch/simulation/: empty_world.launch.py  robot_state_publisher.launch.py  sim_world.launch.py  simulation_nav2.launch.py  urdf_rviz2.launch.py
cugo_ros_simulations/launch/slam/: slam_mapping.launch.py
cugo_ros_simulations/models/cugo_v3/: cugo_v3.urdf  cugo_v3.xacro  model.config  (+4 more)
cugo_ros_simulations/rviz/: nav2_default_view.rviz  urdf.rviz
cugo_ros_simulations/scripts/: gazebo_with_bridge.py  laser_scan_filter_node.py  odom_tf_publisher.py  robot_state_publisher_node.py  spawn_robot.py
(+26 files in other folders)
